Closed Bug 1756955 Opened 3 years ago Closed 8 months ago

After calling `nsIClipboard.emptyClipboard()` , `clipboard.read()` returns one `ClipboardItem` with no types

Categories

(Core :: DOM: Copy & Paste and Drag & Drop, defect, P3)

defect

Tracking

()

RESOLVED FIXED
126 Branch
Tracking Status
firefox126 --- fixed

People

(Reporter: mbrodesser-Igalia, Assigned: edgar)

References

(Blocks 1 open bug, Regressed 1 open bug, )

Details

Attachments

(1 file)

Instead, it should return no ClipboardItem.

Affects (at least) Ubuntu 20.04.

Blocks: 1619251

I am going to fix this in bug 1755863.

Assignee: nobody → echen

(In reply to Edgar Chen [:edgar] from comment #1)

I am going to fix this in bug 1755863.

Okay, I was trying to change this in bug 1755863, but it causes a test failure on https://searchfox.org/mozilla-central/source/toolkit/components/extensions/test/mochitest/test_ext_async_clipboard.html. So I decide not changing any behavior in bug 1755863. I will work on the fix here instead.

Related spec issue: https://github.com/w3c/clipboard-apis/issues/179

Blocks: 1770358
Pushed by echen@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5100ade1a9f2 clipboard.read() should return no clipboardItem if there is only unsupported items in system clipboard; r=nika
Status: NEW → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch
Regressions: 1888144
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: