Bug 1756955 - clipboard.read() should return no clipboardItem if there is only unsupported items in system clipboard; r=nika

This aligns with the current spec. There are some discussion in
https://github.com/w3c/clipboard-apis/issues/179.

Differential Revision: https://phabricator.services.mozilla.com/D205502